--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Anny</h1>
+    <h1>New name</h1>
     <img width="200px" src="profile1.jpeg" alt="">
     <p>my profile text</p>
 </body>
